wownero_libwallet2_api_c/src/main/cpp/wownero_wallet2_api_c.h

//     virtual void refresh() = 0;  
extern ADDAPI void WOWNERO_AddressBook_refresh(void* addressBook_ptr);
//     virtual std::string errorString() const = 0;
extern ADDAPI const char* WOWNERO_AddressBook_errorString(void* addressBook_ptr);
//     virtual int errorCode() const = 0;
extern ADDAPI int WOWNERO_AddressBook_errorCode(void* addressBook_ptr);
//     virtual int lookupPaymentID(const std::string &payment_id) const = 0;
extern ADDAPI int WOWNERO_AddressBook_lookupPaymentID(void* addressBook_ptr, const char* payment_id);
// };
// struct CoinsInfo
// {
//     virtual ~CoinsInfo() = 0;
//     virtual uint64_t blockHeight() const = 0;
extern ADDAPI uint64_t WOWNERO_CoinsInfo_blockHeight(void* coinsInfo_ptr);
//     virtual std::string hash() const = 0;
extern ADDAPI const char* WOWNERO_CoinsInfo_hash(void* coinsInfo_ptr);
//     virtual size_t internalOutputIndex() const = 0;
extern ADDAPI size_t WOWNERO_CoinsInfo_internalOutputIndex(void* coinsInfo_ptr);
//     virtual uint64_t globalOutputIndex() const = 0;
extern ADDAPI uint64_t WOWNERO_CoinsInfo_globalOutputIndex(void* coinsInfo_ptr);
//     virtual bool spent() const = 0;
extern ADDAPI bool WOWNERO_CoinsInfo_spent(void* coinsInfo_ptr);
//     virtual bool frozen() const = 0;
extern ADDAPI bool WOWNERO_CoinsInfo_frozen(void* coinsInfo_ptr);
//     virtual uint64_t spentHeight() const = 0;
extern ADDAPI uint64_t WOWNERO_CoinsInfo_spentHeight(void* coinsInfo_ptr);
//     virtual uint64_t amount() const = 0;
extern ADDAPI uint64_t WOWNERO_CoinsInfo_amount(void* coinsInfo_ptr);
//     virtual bool rct() const = 0;
extern ADDAPI bool WOWNERO_CoinsInfo_rct(void* coinsInfo_ptr);
//     virtual bool keyImageKnown() const = 0;
extern ADDAPI bool WOWNERO_CoinsInfo_keyImageKnown(void* coinsInfo_ptr);
//     virtual size_t pkIndex() const = 0;
extern ADDAPI size_t WOWNERO_CoinsInfo_pkIndex(void* coinsInfo_ptr);
//     virtual uint32_t subaddrIndex() const = 0;
extern ADDAPI uint32_t WOWNERO_CoinsInfo_subaddrIndex(void* coinsInfo_ptr);
//     virtual uint32_t subaddrAccount() const = 0;
extern ADDAPI uint32_t WOWNERO_CoinsInfo_subaddrAccount(void* coinsInfo_ptr);
//     virtual std::string address() const = 0;
extern ADDAPI const char* WOWNERO_CoinsInfo_address(void* coinsInfo_ptr);
//     virtual std::string addressLabel() const = 0;
extern ADDAPI const char* WOWNERO_CoinsInfo_addressLabel(void* coinsInfo_ptr);
//     virtual std::string keyImage() const = 0;
extern ADDAPI const char* WOWNERO_CoinsInfo_keyImage(void* coinsInfo_ptr);
//     virtual uint64_t unlockTime() const = 0;
extern ADDAPI uint64_t WOWNERO_CoinsInfo_unlockTime(void* coinsInfo_ptr);
//     virtual bool unlocked() const = 0;
extern ADDAPI bool WOWNERO_CoinsInfo_unlocked(void* coinsInfo_ptr);
//     virtual std::string pubKey() const = 0;
extern ADDAPI const char* WOWNERO_CoinsInfo_pubKey(void* coinsInfo_ptr);
//     virtual bool coinbase() const = 0;
extern ADDAPI bool WOWNERO_CoinsInfo_coinbase(void* coinsInfo_ptr);
//     virtual std::string description() const = 0;
extern ADDAPI const char* WOWNERO_CoinsInfo_description(void* coinsInfo_ptr);